--- a/Main.ipynb
+++ b/Main.ipynb
@@ -8,6 +8,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Links to good stuff!\n",
+    "\n",
+    "https://github.com/craffel/pretty-midi\n",
+    "\n",
+    "https://towardsdatascience.com/generate-piano-instrumental-music-by-using-deep-learning-80ac35cdbd2e\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
